fix(ServiceCard): remove border from content on mobile view

--- a/components/ui/ServiceCard/index.scss
+++ b/components/ui/ServiceCard/index.scss
@@ -142,6 +142,7 @@
       align-items: center;
       text-align: center;
       width: 95vw;
+      border: none;
 
       .service-card__description {
         flex: 8;
